# calculadora-ci

./: .dockerignore  Prueba2  README.md  app.py  build.ps1  dockerfile  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/operations/: multiplicacion.py  resta.py  suma.py
templates/: index.html
tests/: test_multiplicar.py  test_resta.py  test_suma.py
