[tool.poetry]
name = "ic"
version = "0.1.0"
description = ""
authors = ["Denise <agos.martinez02@hotmail.com>"]




[tool.poetry.dependencies]
python = ">=3.11"
black = "25.1.0"
flake8 = "7.2.0"
flask = "3.1.1"
pytest = "8.4.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

